# stash-tagfarm

./: .gitignore  README.md  pyproject.toml  tagfarm.yaml.example
tagfarm/: __init__.py  cli.py  config.py  linkfarm.py  stash_client.py
